<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#313433" >

        <ImageView
            android:id="@+id/iv_goback"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@drawable/goback" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/change_psw"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/action"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/shallow_base_line"
        android:dividerHeight="1px"
        android:scrollbars="none" >
    </ListView>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2a86c0"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/action_sure"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>