<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4f4f4"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#313433"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/action_longin"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:scaleType="centerInside"
        android:src="@drawable/ico" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/loading_phone" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/phonenum"
                    android:inputType="text"
                     android:singleLine="true"
                    android:paddingLeft="20dp"
                    android:textColor="@color/text_dark_grey"
                    android:textColorHint="@color/text_light_grey"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/base_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/loading_prassword" />

                <EditText
                    android:id="@+id/et_psw"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/intpsw"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:password="true"
                    android:textColor="@color/text_dark_grey"
                    android:textColorHint="@color/text_light_grey"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/base_line" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_loginnow"
        android:padding="10dp"
        android:text="@string/loginnow"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lin_rember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="centerInside"
            android:background="@drawable/checkbox_on" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_dark_grey" />
    </LinearLayout>

</LinearLayout>